crates/kul-core/tests/snapshots/filter__absent_died_gap_finding.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &query)"
---
[
  "bravo",
  "alpha",
  "charlie",
  "echo",
  "foxtrot",
  "golf"
]
