crates/kul-core/tests/snapshots/filter__born_eq_1950_certain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Eq, \"1950\"))"
---
[
  "delta",
  "bravo",
  "alpha"
]
