crates/kul-core/tests/snapshots/filter__born_eq_1950_include_uncertain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Eq, \"1950\").including_uncertain())"
---
[
  "delta",
  "bravo",
  "alpha",
  "charlie",
  "golf"
]
