crates/kul-core/tests/snapshots/filter__born_gt_1950_include_uncertain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Gt, \"1950\").including_uncertain())"
---
[
  "delta",
  "bravo",
  "alpha",
  "charlie",
  "echo",
  "foxtrot",
  "golf"
]
