crates/kul-core/tests/snapshots/filter__born_gte_1961_certain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Gte, \"1961\"))"
---
[
  "foxtrot"
]
