crates/kul-core/tests/snapshots/filter__born_lte_1950_certain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Lte, \"1950\"))"
---
[]
