crates/kul-core/tests/snapshots/filter__born_neq_1950_certain.snap
---
source: crates/kul-core/tests/filter.rs
expression: "person_ids(&cohort(), &born(DateOp::Neq, \"1950\"))"
---
[
  "echo",
  "foxtrot"
]
